projeto login att

--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     <main>
+        <section id="login">
+            <div id="imagem">
+                foto
+            </div>
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta.</p>
+                <form action="login.php" method="post">
+                    <p>
+                        <label for="" id="iemail">E-mail:</label>
+                        <input type="email" name="email" id="iemail" required>
+                    </p>
+                    <p>
+                        <label for="" id="isenha">Senha:</label>
+                        <input type="password" name="senha" id="isenha" requiered>
+                    </p>
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
