--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faça o Login!</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
     <main>
@@ -17,7 +18,7 @@
                 <form action="login.php" method="post">
                     <p>
                         <label for="" id="iemail">E-mail:</label>
-                        <input type="email" name="email" id="iemail" required>
+                        <input type="email" name="email" id="iemail" required >
                     </p>
                     <p>
                         <label for="" id="isenha">Senha:</label>
