--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faça o Login!</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media-query.css">
 </head>
@@ -15,15 +16,19 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta.</p>
-                <form action="login.php" method="post">
-                    <p>
-                        <label for="" id="iemail">E-mail:</label>
-                        <input type="email" name="email" id="iemail" required >
-                    </p>
-                    <p>
-                        <label for="" id="isenha">Senha:</label>
-                        <input type="password" name="senha" id="isenha" requiered>
-                    </p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="email" id="iemail" placeholder="E-mail" autocomplete="email" required maxlength="30">
+                        <label for="iemail">E-mail</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Senha" autocomplete="current-password" required minlength="8" maxlength="30">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="#">Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
                 </form>
             </div>
             
